<resources>
    <string name="app_name">Guess the Word</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="enter_choice">Select The Word Package</string>
    <string name="words_choice">Words</string>
    <string name="movie_word_choice">Movies</string>
    <string name="place_word_choice">Cities</string>
    <string name="share">share</string>
    <string name="intent">I Scored %d point in #GuessTheWord</string>
    <string name="can_not_share">We can not share the data</string>
    <string name="one_minute">1 Minute</string>
    <string name="two_minute">2 Minute</string>
    <string name="five_minute">5 Minute</string>
</resources>