<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  >

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/choice_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/select_option"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/enter_choice"
           android:textSize="20dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.365" />

       <RadioGroup
           android:id="@+id/choices"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="52dp"
           android:gravity="center"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/select_option">

           <RadioButton
               android:id="@+id/normal_words"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20dp"
               android:text="@string/words_choice"
               />

           <RadioButton
               android:id="@+id/movie_word"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20dp"
               android:text="@string/movie_word_choice"/>
           <RadioButton
               android:id="@+id/place_word"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20dp"
               android:text="@string/place_word_choice"
               />


       </RadioGroup>

       <Button
           android:id="@+id/next_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:gravity="center"
           android:text="Next"
           app:layout_constraintTop_toBottomOf="@+id/choices"
           app:layout_constraintStart_toStartOf="parent"
           tools:layout_editor_absoluteX="16dp"
           tools:ignore="InvalidId" />
   </androidx.constraintlayout.widget.ConstraintLayout>





</layout>